# Financial.Web/src/api/types.ts
@@ -115,6 +115,8 @@ export type BankCreateDto = Schema<'BankCreateDTO'>
 export type BankUpdateDto = Schema<'BankUpdateDTO'>
 export type IncomeSourceDto = Schema<'IncomeSourceDTO'>
 export type CategoryDto = Schema<'CategoryDTO'>
+export type CategoryCreateDto = Schema<'CategoryCreateDTO'>
+export type CategoryUpdateDto = Schema<'CategoryUpdateDTO'>
 export type BankBalanceDto = Schema<'BankBalanceDTO'>
 export type TitheSummaryDto = Schema<'TitheSummaryDTO'>
 export type IncomeDto = Schema<'IncomeDTO'>
